--- a/app/static/style/math.css
+++ b/app/static/style/math.css
@@ -6,8 +6,16 @@ div.graph {
 img.graph {
     border: 1px solid lightgray;
     border-radius: 5px;
-    margin: 10px 0;
+    margin-top: 10px;
     width: 400px;
     height: 400px;
     box-shadow: 3px 3px 3px lightgray;
+}
+
+ol li p {
+    padding: 10px 0;
+}
+
+ol li:last-child p {
+    padding-bottom: 0;
 }
